test text spill issue

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -25,9 +25,11 @@ body {
   padding: 0 10px;
   position: absolute;
   width: 100vw;
+  height: 30vh;
   top: 50%;            /* Move the top of the container to the center of the viewport */
   left: 50%;           /* Move the left of the container to the center of the viewport */
   transform: translate(-50%, -50%);  /* Offset the container by half its width and height */ 
+  white-space: nowrap;
 }
 
 .letter {
@@ -72,8 +74,8 @@ body {
   justify-content: center; /* Start with the overlay hidden */
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 30vh;
   background-color: transparent;
   flex-direction: column;
   z-index: 2;
